--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -6,6 +6,12 @@
     margin: 40px 0;
     max-width: 690px;
   }
+
+  @media screen and (max-width: 768px) {
+    .intro__text {
+      max-width:690px ;
+    }
+  }
   
   @media screen and (max-width: 768px) {
     .intro__text {
