--- a/blocks/footer/__copyright/footer__coptright.css
+++ b/blocks/footer/__copyright/footer__coptright.css
@@ -1,14 +1,12 @@
   
 .footer__copyright {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    margin: 0;
+  margin:0;
+  font-size:14px;
+  line-height:16px;
+  font-weight:400;
+}
+@media screen and (max-width:500px) {
+  .copyright {
+   line-height:14px;
   }
-  
-  @media screen and (max-width: 420px) {
-    .footer__copyright {
-      line-height: 14px;
-    }
-  }
+}
