--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,26 +1,16 @@
 .footer__link {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
-    margin: 0 18px 0 0;
-    color: #FFFFFF;
-    text-decoration: none;
-    opacity: 1;
-    transition-property: opacity;
-    transition-duration: 2s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
+  color:#fff;
+  text-decoration:none;
+  margin-right:18px;
+  transition:opacity 0.5s linear;
+}
+.footer__link:hover {
+ opacity:0.8;
+}
+@media screen and (max-width:500px) {
+  .footer__link {
+    font-size:24px;
+    font-weight:400;
+    line-height:24px;
   }
-  
-  .footer__link:hover {
-    opacity: 0.8;
-  }
-  
-  @media screen and (max-width: 420px) {
-    .footer__link {
-      margin: 16px 0 0 0;
-      font-size: 24px;
-      line-height: 24px;
-    }
-  }
+}
