--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -1,8 +1,5 @@
-.footer__list-item {
-    margin-right: 0;
-    margin-bottom: 32px;
+@media screen and (max-width:500px) {
+  .footer__list-item {
+    margin-bottom:32px;
   }
-  
-  .footer__list-item:last-of-type {
-    margin-bottom: 0;
-  }
+}
