--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,15 +1,13 @@
 .footer__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
+  margin:0;
+  padding:0;
+  list-style:none;
+  display:flex;
+}
+
+@media screen and (max-width:500px) {
+  .footer__list {
+    flex-direction:column;
+    width:165px;
   }
-  
-  @media screen and (max-width: 510px) {
-    .footer__list {
-      flex-direction: column;
-      display: flex;
-      margin-left: 0;
-      margin-bottom: 48px;
-    }
-  }
+}
