--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,23 +1,30 @@
-
 .footer {
-  max-width: 1184px;
-  margin: 92px 48px 24px 48px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  box-sizing:border-box;
+  margin-top:92px;
+  display:flex;
+  justify-content:space-between;
+  width:100%;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width:1024px) {
   .footer {
-    margin: 88px 24px 24px 24px;
+    padding-right:48px;
+    padding-left:48px;
   }
 }
-
-@media screen and (max-width: 510px) {
+@media screen and (max-width:768px) {
   .footer {
-    flex-direction: column;
-    margin: 64px 16px 24px 16px;
-    align-items: flex-start;
+    padding-right:24px;
+    padding-left:24px;
+    margin-top:88px;
+  }
+}
+@media screen and (max-width:500px) {
+  .footer {
+    padding-right:16px;
+    padding-left:16px;
+    margin-top:64px;
+    flex-direction:column;
+    justify-content:center;
+    align-items:flex-start;
   }
 }
