--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,31 +1,21 @@
 .header__lang-link {
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 28px;
-    margin: 0 18px 0 0;
-    color: #FFFFFF;
-    font-family: 'Inter', Arial, sans-serif;
-    text-align: center;
-    opacity: 1;
-    transition-property: opacity;
-    transition-duration: 1s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
-    text-decoration: none;
+  color:#fff;
+  text-decoration:none;
+  font-weight:400;
+  font-style:normal;
+  font-size:24px;
+  line-height:28px;
+  transition:opacity 0.5s linear;
+}
+.header__lang-link:hover {
+  opacity:0.8;
+}
+.header__lang-link:first-child {
+  margin-right:18px;
+}
+@media screen and (max-width:500px) {
+  .header__lang-link {
+    font-size:18px;
+    line-height:20px;
   }
-  
-  .header__lang-link:hover {
-    opacity: 0.8;
-  }
-  
-  .header__lang-link:last-of-type {
-    margin-right: 0px;
-  }
-  
-  @media screen and (max-width: 420px) {
-    .header__lang-link {
-      font-size: 18px;
-      line-height: 20px;
-    }
-  }
+}
