--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,28 +1,26 @@
 
 .header {
-  margin: 34px 148px 0 148px;
-  max-width: 984px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  box-sizing:border-box;
+  width:100%;
+  min-width:288px;
+  padding:0 100px 0;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:1024px) {
   .header {
-    margin-right: 48px;
-    margin-left: 48px;
+    padding:0 48px 0;
   }
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width:768px) {
   .header {
-    margin: 46px 24px 0 24px;
+    padding:0 24px 0;
   }
 }
-
-@media screen and (max-width: 420px) {
+@media screen and (max-width:500px) {
   .header {
-    margin:20px 16px 0 16px;
+    padding:0 16px 0;
   }
 }
