--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,15 +1,13 @@
-.intro__title {
-    max-width: 690px;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 54px;
-    line-height: 58px;
-    margin: 0 auto 0 0;
+.intro__title{
+  margin:0;
+  font-size:54px;
+  line-height:58px;
+  font-weight:900;
+  width:100%;
+}
+@media screen and (max-width:500px){
+  .intro__title {
+    line-height:35px;
+    font-size:32px;
   }
-  
-  @media screen and (max-width: 767px) {
-    .intro__title {
-      font-size: 32px;
-      line-height: 35px;
-    }
-  }
+}
