--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,25 +1,23 @@
 
 .intro {
-  align-self: flex-start;
-  max-width: 984px;
-  margin: 92px auto 0 148px;
+  box-sizing:border-box;
+  max-width:790px;
+  width:100%;
+  padding:92px 0 92px 100px;
 }
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:1024px) {
   .intro {
-    margin: 92px auto 0 48px;
+    padding-left:48px;
+    padding-right:52px;
   }
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width:768px) {
   .intro {
-    margin: 88px 24px 0 24px;
+    padding:88px 24px;
   }
 }
-
-@media screen and (max-width: 420px) {
-  .intro{
-    margin: 64px 16px 0 16px;
-    width: 288px;
+@media screen and (max-width:500px) {
+  .intro {
+    padding:64px 16px;
   }
 }
