--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,22 +1,21 @@
 .lead__caption {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 10px;
-    line-height: 14px;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    margin: 8px auto 0 0;
-    align-self: flex-start;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .lead__caption {
-      margin: 8px 24px 0 24px;
-    }
-  }
-  
-  @media screen and (max-width: 420px) {
-    .lead__caption {
-      margin: 8px 16px 0 16px;
-    }
-  }
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+  line-height:14px;
+  letter-spacing:0.15em;
+  margin-top:8px;
+  text-transform:uppercase;
+}
+@media screen and (max-width:768px) {
+  .lead__caption {
+     padding-right:24px;
+    padding-left:24px;
+   }
+}
+@media screen and (max-width:500px) {
+  .lead__caption {
+     padding-right:16px;
+    padding-left:16px;
+   }
+}
