--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -1,3 +1,20 @@
 .lead__figure {
-    margin: 0;
+  margin:0;
+  padding:0;
+  height:637px;
+}
+@media screen and (max-width:1024px){
+  .lead__figure {
+    height:602px;
   }
+}
+@media screen and (max-width:768px){
+  .lead__figure {
+    height:502px;
+  }
+}
+@media screen and (max-width:500px){
+  .lead__figure {
+    height:222px;
+  }
+}
