--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,12 +1,18 @@
 .lead__image {
-    width: 100%;
-    max-width: 984px;
-    max-height: 615px;
-    margin: 64px auto 0 auto;
-  }
   
-  @media screen and (max-width: 320px) {
-    .lead__image {
-      margin-top: 40px;
-    }
+  margin:0;
+  min-width:100%;
+  width:100%;
+  height:96.5463108%;
+  max-width:984px;
+}
+@media screen and (max-width:1024px){
+  .lead__image {
+    height:96.345515%;
   }
+}
+@media screen and (max-width:768px){
+  .lead__image {
+    height:calc(100% - 22px);
+  }
+}
