--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,17 +1,19 @@
 .lead__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
-    margin: 0 auto;
-    width: 720px;
+  text-align:center;
+  margin:0;
+  font-size:96px;
+  font-weight:900;
+  font-style:normal;
+  line-height:100px;
+  max-width:720px;
+  min-height:88px;
+}
+
+@media screen and (max-width:500px) {
+  .lead__title {
+    font-size:40px;
+    line-height:44px;
+    padding-left:16px;
+    padding-right:16px;
   }
-  
-  @media screen and (max-width: 767px) {
-    .lead__title {
-      font-size: 40px;
-      line-height: 44px;
-      width: 288px;
-    }
-  }
+}
