--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,23 +1,21 @@
-
 .lead {
-  margin: 58px 148px 0 148px;
-  max-width: 984px;
+  box-sizing:border-box;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  height:auto;
+  min-height:406px;
+  padding:58px 100px 0;
 }
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:1024px){
   .lead {
-    margin: 50px 48px 0 48px;
+    padding:50px 48px 0;
   }
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width:768px){
   .lead {
-    margin: 50px 0 0 0;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .lead {
-    width: 100%;
+    padding:50px 0 0;
   }
 }
