--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,27 +1,27 @@
 .photo-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  grid-gap: 16px;
-  margin: 92px 48px;
-  max-width: 1184px;
+  box-sizing:border-box;
+  width:100%;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(284px,auto));
+  justify-content:center;
+  grid-gap:16px;
+}
+@media screen and (max-width:1024px){
+  .photo-grid {
+    grid-gap:14px;
+    padding:0 48px 0;
+   }
+}
+@media screen and (max-width:768px){
+  .photo-grid {
+    grid-gap:16px;
+    padding:0 24px 0;
+   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:500px){
   .photo-grid {
-    grid-gap: 14px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid {
-    grid-gap: 16px;
-    margin: 88px 24px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .photo-grid {
-    grid-gap: 12px;
-    margin: 66px 16px;
-  }
+    grid-gap:12px;
+    padding:0 16px 0;
+   }
 }
