--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,23 +1,26 @@
 .places {
-    max-width: 984px;
-    margin: 0 auto;
+  box-sizing:border-box;
+  width:100%;
+  padding:12px 100px 92px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
+@media screen and (max-width:1024px) {
+  .places {
+    padding-left:48px;
+    padding-right:48px;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .places {
-      margin: 0 48px;
-    }
+}
+@media screen and (max-width:768px) {
+  .places {
+    padding-left:24px;
+    padding-right:24px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .places {
-      margin: 0 24px;
-    }
+}
+@media screen and (max-width:500px) {
+  .places {
+    padding:16px 0 64px;
   }
-  
-  @media screen and (max-width: 420px) {
-    .places {
-      width: 320px;
-      margin: auto;
-    }
-  }
+}
