--- a/pages/index.css
+++ b/pages/index.css
@@ -2,18 +2,18 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/body/body.css);
+@import url(../blocks/body-container/body-container.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/main/main.css);
-@import url(../blocks/body-container/body-container.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/main-route/main-route.css);
 
-@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__copyright/footer__coptright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__list/footer__list.css);
 @import url(../blocks/footer/__list-item/footer__list-item.css);
@@ -21,9 +21,9 @@
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/intro/__list-details/intro__list-details.css);
 @import url(../blocks/intro/__title/intro__title.css);
-@import url(../blocks/intro/__subtitle/intro__subtitle.css);
-@import url(../blocks/intro/__description/intro__description.css);
-@import url(../blocks/intro/__list-category/intro__list-category.css);
+@import url(../blocks/intro/__subtitle.css/intro__subtitle.css);
+@import url(../blocks/intro/__descriptin/intro__description.css);
+@import url(../blocks/intro/__list-category/intro__list-categorycss);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
