--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,7 +1,9 @@
-
 .body {
-  background-color:#2A2C2F;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  font-family: 'Inter', Arial, sans-serif;
+  background-color: #2A2C2F;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 320px;
 }
