--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,12 +1,18 @@
 .cover__overlay {
-    width: 100%;
-    height: 100%;
-    transition-property: opacity;
-    transition-duration: 2s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgb(42, 44, 47, 0.3);
+  transition-property: opacity;
+  transition-duration: 2s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cover__overlay:hover {
+  background-color: rgb(42, 44, 47, 0.8);
+}
