--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,30 +1,22 @@
 .footer {
-  box-sizing:border-box;
-  margin-top:92px;
-  display:flex;
-  justify-content:space-between;
-  width:100%;
+  max-width: 1184px;
+  margin: 92px 48px 24px 48px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width: 768px) {
   .footer {
-    padding-right:48px;
-    padding-left:48px;
+    margin: 88px 24px 24px 24px;
   }
 }
-@media screen and (max-width:768px) {
+
+@media screen and (max-width: 510px) {
   .footer {
-    padding-right:24px;
-    padding-left:24px;
-    margin-top:88px;
-  }
-}
-@media screen and (max-width:500px) {
-  .footer {
-    padding-right:16px;
-    padding-left:16px;
-    margin-top:64px;
-    flex-direction:column;
-    justify-content:center;
-    align-items:flex-start;
+    flex-direction: column;
+    margin: 64px 16px 24px 16px;
+    align-items: flex-start;
   }
 }
