--- a/blocks/header/__list-item/header__list-item.css
+++ b/blocks/header/__list-item/header__list-item.css
@@ -1,7 +1,8 @@
 .header__list-item {
-    margin-right: 18px;
-  }
-  
-  .header__list-item:last-of-type {
-    margin-right: 0;
-  }
+  display: inline;
+  margin-right: 18px;
+}
+
+.header__list-item:last-of-type {
+  margin-right: 0;
+}
