--- a/blocks/header/__list/header__list.css
+++ b/blocks/header/__list/header__list.css
@@ -1,8 +1,6 @@
-  
 .header__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-  }
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: inline;
+}
