--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,29 @@
 
 .header {
-  box-sizing:border-box;
-  width:100%;
-  min-width:288px;
-  padding:0 100px 0;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+  margin: 34px 148px 0 148px;
+  max-width: 984px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
   .header {
-    padding:0 48px 0;
+    margin-right: 48px;
+    margin-left: 48px;
   }
 }
-@media screen and (max-width:768px) {
+
+@media screen and (max-width: 768px) {
   .header {
-    padding:0 24px 0;
+    margin: 46px 24px 0 24px;
+    max-width: 720px;
   }
 }
-@media screen and (max-width:500px) {
+
+@media screen and (max-width: 420px) {
   .header {
-    padding:0 16px 0;
+    margin:20px 16px 0 16px;
   }
 }
