--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,13 +1,15 @@
-.intro__title{
-  margin:0;
-  font-size:54px;
-  line-height:58px;
-  font-weight:900;
-  width:100%;
+.intro__title {
+  max-width: 690px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
+  margin: 0 auto 0 0;
 }
-@media screen and (max-width:500px){
+
+@media screen and (max-width: 767px) {
   .intro__title {
-    line-height:35px;
-    font-size:32px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
