--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,23 +1,25 @@
 
 .intro {
-  box-sizing:border-box;
-  max-width:790px;
-  width:100%;
-  padding:92px 0 92px 100px;
+  align-self: flex-start;
+  max-width: 984px;
+  margin: 92px auto 0 148px;
 }
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width: 1024px) {
   .intro {
-    padding-left:48px;
-    padding-right:52px;
+    margin: 92px auto 0 48px;
   }
 }
-@media screen and (max-width:768px) {
+
+@media screen and (max-width: 768px) {
   .intro {
-    padding:88px 24px;
+    margin: 88px 24px 0 24px;
   }
 }
-@media screen and (max-width:500px) {
-  .intro {
-    padding:64px 16px;
+
+@media screen and (max-width: 420px) {
+  .intro{
+    margin: 64px 16px 0 16px;
+    width: 288px;
   }
 }
