--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,24 +1,24 @@
 .lead__subtitle {
-  margin:32px 0 64px;
-  max-width:620px;
-  font-weight:400;
-  font-style:normal;
-  font-size:30px;
-  line-height:36px;
-  text-align:center;
+  width: 620px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
 }
-@media screen and (max-width:1024px) {
+
+@media screen and (max-width: 500px) {
   .lead__subtitle {
-    margin-bottom:56px;
+    font-size: 16px;
+    line-height: 20px;
+    width: 288px;
+    margin: 16px auto 0;
   }
 }
-@media screen and (max-width:500px) {
+
+@media screen and (min-width: 768px) {
   .lead__subtitle {
-    font-size:16px;
-    line-height:20px;
-    padding-right:16px;
-    padding-left:16px;
-    margin-bottom:40px;
-    margin-top:16px;
+    width: 620px;
+    margin: 32px auto 0;
   }
 }
