--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,10 +1,12 @@
 .logo {
-  width:190px;
-  height:44px;
+  width: 190px;
+  height: 44px;
+  margin: 0 auto 0 0;
 }
-@media screen and (max-width:500px) {
+
+@media screen and (max-width: 420px) {
   .logo {
-    width:156px;
-    height:36px;
+    width: 156px;
+    height: 36px;
   }
 }
