--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,13 +1,17 @@
 .place__image {
-    object-fit: cover;
-    width: 100%;
-    max-width: 460px;
-    max-height: 460px;
+  margin:0;
+  max-width:460px;
+  min-width:100%;
+  width:100%;
+  object-fit:contain;
+}
+@media screen and (max-width:1024px){
+  .place__image {
+    max-width:440px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .place__image {
-      max-width: initial;
-      max-height: initial;
-    }
+}
+@media screen and (max-width:768px){
+  .place__image {
+    max-width:340px;
   }
+}
