--- a/pages/index.css
+++ b/pages/index.css
@@ -1,49 +1,60 @@
 
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/fonts.css);
-@import url(../blocks/body/body.css);
-@import url(../blocks/body-container/body-container.css);
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/intro/intro.css);
-@import url(../blocks/lead/lead.css);
-@import url(../blocks/logo/logo.css);
-@import url(../blocks/main/main.css);
-@import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/places/places.css);
-@import url(../blocks/main-route/main-route.css);
 
-@import url(../blocks/footer/__copyright/footer__coptright.css);
-@import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/footer/__list/footer__list.css);
-@import url(../blocks/footer/__list-item/footer__list-item.css);
-@import url(../blocks/header/__langs/header__langs.css);
+
+@import url(../fonts/inter.css);
+
+
+@import url(../blocks/body/body.css);
+@import url(../blocks/body/__container/body__container.css);
+
+@import url(../blocks/header/header.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-@import url(../blocks/intro/__list-details/intro__list-details.css);
-@import url(../blocks/intro/__title/intro__title.css);
-@import url(../blocks/intro/__subtitle.css/intro__subtitle.css);
-@import url(../blocks/intro/__descriptin/intro__description.css);
-@import url(../blocks/intro/__list-category/intro__list-categorycss);
+@import url(../blocks/header/__list/header__list.css);
+@import url(../blocks/header/__list-item/header__list-item.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+
+
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__figure/lead__figure.css);
+
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/into__list.css);
+@import url(../blocks/intro/__paragraph/intro__paragraph.css);
+@import url(../blocks/intro/__span/intro__span.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
-@import url(../blocks/places/__image/places__image.css);
-@import url(../blocks/places/__link/places__link.css);
-@import url(../blocks/places/__description/places__description.css);
-@import url(../blocks/places/__place/places__place.css);
-@import url(../blocks/places/__title/places__title.css);
-@import url(../blocks/places/__paragraph/places__paragraph.css);
-@import url(../blocks/places/__url-heading/places__url-heading.css);
-@import url(../blocks/places/__website/places__website.css);
-@import url(../blocks/intro/__description/intro__description.css);
-@import url(../blocks/main-route/__title/main-route__title.css);
-@import url(../blocks/main-route/__subtitle/main-route__subtitle.css);
-@import url(../blocks/main-route/__link/main-route__link.css);
 
 
+@import url(../blocks/places/places.css);
 
-@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraph-container/place__paragraph-container.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
 
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__box/footer__box.css);
+@import url(../blocks/footer/__list/footer__list.css);
+@import url(../blocks/footer/__list-item/footer__list-item.css);
